# Simulacion-Proyecto-Final

./: .gitignore  README.md  ls
src/mlr_nav2_puzzlebot/: package.xml  setup.cfg  setup.py
src/mlr_nav2_puzzlebot/config/: nav2_config.yaml  puzzlebot_bridge.yaml  puzzlebot_global_params.yaml  puzzlebot_nodes_params.yaml
src/mlr_nav2_puzzlebot/launch/: bringup_simulation_simple_launch.py  challenge_launch.py  launch.py
src/mlr_nav2_puzzlebot/maps/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml  puzzlebot_map.yaml
src/mlr_nav2_puzzlebot/mlr_nav2_puzzlebot/: movement.py  puzzlebot_joint_state_publisher.py  puzzlebot_localization.py
src/mlr_nav2_puzzlebot/mlr_nav2_puzzlebot/utils/: puzzlebot_kinematics.py
src/mlr_nav2_puzzlebot/models/: model.config  model.sdf  puzzlebot.sdf
src/mlr_nav2_puzzlebot/params/: nav2_config.yaml  slam_toolbox_config.yaml
src/mlr_nav2_puzzlebot/respaldo/models_respaldo/: puzzlebot.sdf
src/mlr_nav2_puzzlebot/respaldo/urdf_respaldo/: puzzlebot.urdf
src/mlr_nav2_puzzlebot/rviz/: map.rviz  nav.rviz
src/mlr_nav2_puzzlebot/rviz_config/: map.rviz  nav_alain.rviz
src/mlr_nav2_puzzlebot/urdf/: gazebo_control.xacro  laser_camera_bracket.xacro  lidar.xacro  materials.xacro  parameters_jetson_lidar.xacro  puzzlebot.urdf  puzzlebot.xacro
src/mlr_nav2_puzzlebot/worlds/: puzzlebot_world.world  reto.world
