<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mlr_nav2_puzzlebot</name>
  <version>0.0.0</version>
  <description>Puzzlebot navigation using nav2</description>
  <maintainer email="paolo.alfonso.reyes@gmail.com">Paolo</maintainer>
  <maintainer email ="ricardo.navgom@gmail.com">Ricardo</maintainer>
  <maintainer email = "ferjosums@gmail.com">Fernando</maintainer>
  <maintainer email = "alvaofic@gmail.com">Alain</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ros2launch</depend>
  <depend>nav2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
