<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mlr_nav2_puzzlebot</name>
  <version>1.0.0</version>
  <description>Puzzlebot navigation using nav2</description>
  <maintainer email="paolo.alfonso.reyes@gmail.com">Paolo Reyes</maintainer>
  <maintainer email="ricardo.navgom@gmail.com">Ricardo Navarro</maintainer>
  <maintainer email="ferjosums@gmail.com">Fernando Matute</maintainer>
  <maintainer email="alvaofic@gmail.com">Alain Vicencio</maintainer>
  <license>Apache-2.0</license>


  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2launch</depend>
  <depend>tf2_ros_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
